[package]
name = "cache"
version = "0.0.0"
description = "Virtual package to reference all popular crates to be cached"

# N.B. We cannot use `={version}` since cargo doesn't allow two compatible versions of
# the same crate appears in the dependency tree, eg. getrandom 0.2.6 and getrandom@0.2.7.
# So we use carpet specifiers to allow merging compatible versions to the highest one currently.
[dependencies]
addr2line = "0.17.0"
adler = "1.0.2"
ahash = "0.7.6"
aho-corasick = "0.7.18"
ansi_term = "0.12.1"
anyhow = "1.0.57"
arrayref = "0.3.6"
arrayvec = "0.7.2"
arrayvec-2 = { package = "arrayvec", version = "0.5.2" }
async-trait = "0.1.56"
atty = "0.2.14"
autocfg = "1.1.0"
backtrace = "0.3.65"
base64 = "0.13.0"
bincode = "1.3.3"
bitflags = "1.3.2"
block-buffer = "0.10.2"
block-buffer-2 = { package = "block-buffer", version = "0.9.0" }
block-buffer-3 = { package = "block-buffer", version = "0.7.3" }
block-padding = "0.1.5"
bstr = "0.2.17"
byte-tools = "0.3.1"
byteorder = "1.4.3"
bytes = "1.1.0"
cc = "1.0.73"
cfg-if = "1.0.0"
cfg-if-2 = { package = "cfg-if", version = "0.1.10" }
chrono = "0.4.19"
clap = "2.34.0"
convert_case = "0.4.0"
cpufeatures = "0.2.2"
crc32fast = "1.3.2"
crossbeam-channel = "0.5.4"
crossbeam-deque = "0.8.1"
crossbeam-utils = "0.8.8"
crypto-common = "0.1.3"
csv = "1.1.6"
csv-core = "0.1.10"
derive_more = "0.99.17"
digest = "0.10.3"
digest-2 = { package = "digest", version = "0.9.0" }
digest-3 = { package = "digest", version = "0.8.1" }
dirs-next = "2.0.0"
dirs-sys-next = "0.1.2"
either = "1.6.1"
encoding_rs = "0.8.31"
env_logger = "0.9.0"
fake-simd = "0.1.2"
fastrand = "1.7.0"
flate2 = "1.0.24"
fnv = "1.0.7"
foreign-types = "0.3.2"
foreign-types-shared = "0.1.1"
form_urlencoded = "1.0.1"
futures = "0.3.21"
futures-channel = "0.3.21"
futures-core = "0.3.21"
futures-executor = "0.3.21"
futures-io = "0.3.21"
futures-macro = "0.3.21"
futures-sink = "0.3.21"
futures-task = "0.3.21"
futures-util = "0.3.21"
generic-array = "0.14.5"
generic-array-2 = { package = "generic-array", version = "0.12.4" }
getrandom = "0.2.7"
getrandom-2 = { package = "getrandom", version = "0.1.16" }
gimli = "0.26.1"
glob = "0.3.0"
h2 = "0.3.13"
half = "1.8.2"
hashbrown = "0.12.1"
hashbrown-2 = { package = "hashbrown", version = "0.11.2" }
heck = "0.4.0"
heck-2 = { package = "heck", version = "0.3.3" }
hermit-abi = "0.1.19"
hex = "0.4.3"
http = "0.2.8"
http-body = "0.4.5"
httparse = "1.7.1"
httpdate = "1.0.2"
humantime = "2.1.0"
hyper = "0.14.19"
hyper-tls = "0.5.0"
ident_case = "1.0.1"
idna = "0.2.3"
indexmap = "1.8.2"
instant = "0.1.12"
ipnet = "2.5.0"
itertools = "0.10.3"
itoa = "1.0.2"
itoa-2 = { package = "itoa", version = "0.4.8" }
jobserver = "0.1.24"
lazy_static = "1.4.0"
lazycell = "1.3.0"
libc = "0.2.126"
libloading = "0.7.3"
linked-hash-map = "0.5.4"
lock_api = "0.4.7"
log = "0.4.17"
maplit = "1.0.2"
matchers = "0.1.0"
matches = "0.1.9"
memchr = "2.5.0"
memoffset = "0.6.5"
mime = "0.3.16"
minimal-lexical = "0.2.1"
miniz_oxide = "0.5.3"
miniz_oxide-2 = { package = "miniz_oxide", version = "0.4.4" }
mio = "0.8.3"
native-tls = "0.2.10"
nom = "7.1.1"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
num_cpus = "1.13.1"
num_threads = "0.1.6"
object = "0.28.4"
once_cell = "1.12.0"
opaque-debug = "0.3.0"
opaque-debug-2 = { package = "opaque-debug", version = "0.2.3" }
openssl = "0.10.40"
openssl-macros = "0.1.0"
openssl-probe = "0.1.5"
os_str_bytes = "6.1.0"
parking_lot = "0.12.1"
parking_lot-2 = { package = "parking_lot", version = "0.11.2" }
parking_lot_core = "0.9.3"
parking_lot_core-2 = { package = "parking_lot_core", version = "0.8.5" }
paste = "1.0.7"
percent-encoding = "2.1.0"
pest = "2.1.3"
pin-project = "1.0.10"
pin-project-internal = "1.0.10"
pin-project-lite = "0.2.9"
pin-utils = "0.1.0"
pkg-config = "0.3.25"
ppv-lite86 = "0.2.16"
proc-macro-error = "1.0.4"
proc-macro-error-attr = "1.0.4"
proc-macro-hack = "0.5.19"
proc-macro2 = "1.0.40"
quick-error = "1.2.3"
quote = "1.0.20"
rand = "0.8.5"
rand-2 = { package = "rand", version = "0.7.3" }
rand_chacha = "0.3.1"
rand_chacha-2 = { package = "rand_chacha", version = "0.2.2" }
rand_core = "0.6.3"
rand_core-2 = { package = "rand_core", version = "0.5.1" }
rayon = "1.5.3"
rayon-core = "1.9.3"
regex = "1.5.6"
regex-automata = "0.1.10"
regex-syntax = "0.6.26"
remove_dir_all = "0.5.3"
ring = "0.16.20"
rustc-demangle = "0.1.21"
rustc-hash = "1.1.0"
rustc_version = "0.4.0"
rustc_version-2 = { package = "rustc_version", version = "0.2.3" }
rustversion = "1.0.6"
ryu = "1.0.10"
same-file = "1.0.6"
scopeguard = "1.1.0"
sct = "0.7.0"
semver = "1.0.10"
semver-2 = { package = "semver", version = "0.9.0" }
semver-parser = "0.7.0"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
serde_urlencoded = "0.7.1"
sha-1 = "0.10.0"
sha-1-2 = { package = "sha-1", version = "0.8.2" }
sha2 = "0.10.2"
sha2-2 = { package = "sha2", version = "0.9.9" }
sharded-slab = "0.1.4"
signal-hook-registry = "1.4.0"
siphasher = "0.3.10"
slab = "0.4.6"
smallvec = "1.8.0"
socket2 = "0.4.4"
spin = "0.5.2"
stable_deref_trait = "1.2.0"
static_assertions = "1.1.0"
strsim = "0.10.0"
strsim-2 = { package = "strsim", version = "0.8.0" }
subtle = "2.4.1"
syn = "1.0.98"
synstructure = "0.12.6"
tempfile = "3.3.0"
termcolor = "1.1.3"
textwrap = "0.15.0"
textwrap-2 = { package = "textwrap", version = "0.11.0" }
thiserror = "1.0.31"
thiserror-impl = "1.0.31"
thread_local = "1.1.4"
time = "0.3.9"
time-2 = { package = "time", version = "0.1.44" }
time-macros = "0.2.4"
tinyvec = "1.6.0"
tinyvec_macros = "0.1.0"
tokio = "1.19.2"
tokio-macros = "1.8.0"
tokio-native-tls = "0.3.0"
tokio-util = "0.7.3"
toml = "0.5.9"
tower-layer = "0.3.1"
tower-service = "0.3.1"
tracing = "0.1.35"
tracing-attributes = "0.1.21"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.11"
try-lock = "0.2.3"
typenum = "1.15.0"
ucd-trie = "0.1.3"
unicase = "2.6.0"
unicode-bidi = "0.3.8"
unicode-ident = "1.0.1"
unicode-normalization = "0.1.19"
unicode-segmentation = "1.9.0"
unicode-width = "0.1.9"
unicode-xid = "0.2.3"
untrusted = "0.7.1"
url = "2.2.2"
uuid = "0.8.2"
vec_map = "0.8.2"
version_check = "0.9.4"
walkdir = "2.3.2"
want = "0.3.0"
webpki = "0.22.0"
which = "4.2.5"
winapi = "0.3.9"
winapi-i686-pc-windows-gnu = "0.4.0"
winapi-util = "0.1.5"
winapi-x86_64-pc-windows-gnu = "0.4.0"
yaml-rust = "0.4.5"
