[package]
name = "cache"
version = "0.0.0"
description = "Virtual package to reference all popular crates to be cached"

# N.B. We cannot use `={version}` since cargo doesn't allow two compatible versions of
# the same crate appears in the dependency tree, eg. getrandom 0.2.6 and getrandom@0.2.7.
# So we use carpet specifiers to allow merging compatible versions to the highest one currently.
[dependencies]
addr2line = "0.17"
adler = "1"
ahash = "0.7"
aho-corasick = "0.7"
ansi_term = "0.12"
anyhow = "1"
arrayref = "0.3"
arrayvec = "0.7"
arrayvec-2 = { package = "arrayvec", version = "0.5" }
async-trait = "0.1"
atty = "0.2"
autocfg = "1"
backtrace = "0.3"
base64 = "0.13"
bincode = "1"
bitflags = "1"
block-buffer = "0.10"
block-buffer-2 = { package = "block-buffer", version = "0.9" }
block-buffer-3 = { package = "block-buffer", version = "0.7" }
block-padding = "0.1"
bstr = "0.2"
byte-tools = "0.3"
byteorder = "1"
bytes = "1"
cc = "1"
cfg-if = "1"
cfg-if-2 = { package = "cfg-if", version = "0.1" }
chrono = "0.4"
clap = "2"
concurrent-queue = "1"
convert_case = "0.4"
cpufeatures = "0.2"
crc32fast = "1"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
crossbeam-epoch = "0.9"
crossbeam-utils = "0.8"
crunchy = "0.2"
crypto-common = "0.1"
csv = "1"
csv-core = "0.1"
data-encoding = "2"
derivative = "2"
derive_more = "0.99"
digest = "0.10"
digest-2 = { package = "digest", version = "0.9" }
digest-3 = { package = "digest", version = "0.8" }
dirs-next = "2"
dirs-sys-next = "0.1"
either = "1"
encoding_rs = "0.8"
env_logger = "0.9"
fake-simd = "0.1"
fallible-iterator = "0.2"
fastrand = "1"
fixedbitset = "0.4"
fnv = "1"
foreign-types = "0.3"
foreign-types-shared = "0.1"
form_urlencoded = "1"
futures = "0.3"
futures-channel = "0.3"
futures-core = "0.3"
futures-executor = "0.3"
futures-io = "0.3"
futures-macro = "0.3"
futures-sink = "0.3"
futures-task = "0.3"
futures-util = "0.3"
generic-array = "0.14"
generic-array-2 = { package = "generic-array", version = "0.12" }
getrandom = "0.2"
getrandom-2 = { package = "getrandom", version = "0.1" }
gimli = "0.26"
glob = "0.3"
h2 = "0.3"
half = "1"
hashbrown = "0.11"
heck = "0.4"
heck-2 = { package = "heck", version = "0.3" }
hermit-abi = "0.1"
hex = "0.4"
hostname = "0.3"
http = "0.2"
http-body = "0.4"
httparse = "1"
httpdate = "1"
humantime = "2"
hyper = "0.14"
hyper-tls = "0.5"
ident_case = "1"
idna = "0.2"
indexmap = "1"
instant = "0.1"
ipnet = "2"
itertools = "0.10"
itoa = "1"
itoa-2 = { package = "itoa", version = "0.4" }
jobserver = "0.1"
lazy_static = "1"
lazycell = "1"
libc = "0.2"
libloading = "0.7"
linked-hash-map = "0.5"
lock_api = "0.4"
log = "0.4"
maplit = "1"
match_cfg = "0.1"
matchers = "0.1"
matches = "0.1"
memchr = "2"
memoffset = "0.6"
mime = "0.3"
minimal-lexical = "0.2"
miniz_oxide = "0.5"
miniz_oxide-2 = { package = "miniz_oxide", version = "0.4" }
mio = "0.8"
multimap = "0.8"
native-tls = "0.2"
nom = "7"
nom-2 = { package = "nom", version = "5" }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
num_cpus = "1"
once_cell = "1"
opaque-debug = "0.3"
opaque-debug-2 = { package = "opaque-debug", version = "0.2" }
openssl-probe = "0.1"
os_str_bytes = "6"
parking_lot = "0.12"
parking_lot-2 = { package = "parking_lot", version = "0.11" }
parking_lot_core = "0.9"
parking_lot_core-2 = { package = "parking_lot_core", version = "0.8" }
paste = "1"
peeking_take_while = "0.1"
percent-encoding = "2"
pest = "2"
pest_derive = "2"
pest_generator = "2"
pest_meta = "2"
phf_shared = "0.10"
pin-project = "1"
pin-project-internal = "1"
pin-project-lite = "0.2"
pin-utils = "0.1"
pkg-config = "0.3"
ppv-lite86 = "0.2"
proc-macro-crate = "1"
proc-macro-error = "1"
proc-macro-error-attr = "1"
proc-macro-hack = "0.5"
proc-macro2 = "1"
quick-error = "1"
quote = "1"
rand = "0.8"
rand-2 = { package = "rand", version = "0.7" }
rand_chacha = "0.3"
rand_chacha-2 = { package = "rand_chacha", version = "0.2" }
rand_core = "0.6"
rand_core-2 = { package = "rand_core", version = "0.5" }
regex = "1"
regex-automata = "0.1"
regex-syntax = "0.6"
remove_dir_all = "0.5"
reqwest = "0.11"
ring = "0.16"
rustc-demangle = "0.1"
rustc-hash = "1"
rustc_version = "0.4"
rustc_version-2 = { package = "rustc_version", version = "0.2" }
rustversion = "1"
ryu = "1"
same-file = "1"
scoped-tls = "1"
scopeguard = "1"
sct = "0.7"
semver = "0.9"
semver-parser = "0.7"
serde = "1"
serde_cbor = "0.11"
serde_derive = "1"
serde_json = "1"
serde_urlencoded = "0.7"
sha-1 = "0.10"
sha-1-2 = { package = "sha-1", version = "0.9" }
sha-1-3 = { package = "sha-1", version = "0.8" }
sha2 = "0.10"
sha2-2 = { package = "sha2", version = "0.9" }
sharded-slab = "0.1"
shlex = "1"
signal-hook-registry = "1"
siphasher = "0.3"
slab = "0.4"
smallvec = "1"
socket2 = "0.4"
spin = "0.5"
stable_deref_trait = "1"
static_assertions = "1"
strsim = "0.10"
strsim-2 = { package = "strsim", version = "0.8" }
subtle = "2"
syn = "1"
synstructure = "0.12"
tempfile = "3"
termcolor = "1"
terminal_size = "0.1"
textwrap = "0.15"
textwrap-2 = { package = "textwrap", version = "0.11" }
thiserror = "1"
thiserror-impl = "1"
thread_local = "1"
time = "0.3"
time-2 = { package = "time", version = "0.1" }
time-macros = "0.2"
tinyvec = "1"
tinyvec_macros = "0.1"
tokio-macros = "1"
tokio-native-tls = "0.3"
tokio-stream = "0.1"
tokio-util = "0.6"
toml = "0.5"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-attributes = "0.1"
tracing-core = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
try-lock = "0.2"
typenum = "1"
ucd-trie = "0.1"
unicase = "2"
unicode-bidi = "0.3"
unicode-ident = "1"
unicode-normalization = "0.1"
unicode-segmentation = "1"
unicode-width = "0.1"
unicode-xid = "0.2"
untrusted = "0.7"
url = "2"
uuid = "0.8"
vcpkg = "0.2"
vec_map = "0.8"
version_check = "0.9"
void = "1"
walkdir = "2"
want = "0.3"
webpki = "0.22"
webpki-2 = { package = "webpki", version = "0.21" }
which = "4"
winapi = "0.3"
winapi-i686-pc-windows-gnu = "0.4"
winapi-util = "0.1"
winapi-x86_64-pc-windows-gnu = "0.4"
yaml-rust = "0.4"
