[package]
name = "nocargo"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Helper program for github.com/oxalica/nocargo"
repository = "https://github.com/oxalica/nocargo"

[[bin]]
name = "noc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.40"
askama = { version = "0.11.1", default-features = false }
cargo_toml = "0.11.5"
clap = { version = "3.2.8", features = ["derive"] }
once_cell = "1.12.0"
regex = "1.5.4"
