[package]
name = "dep-source-kinds"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crates.io
bitflags = "1.3.2"
# External registry
# cfg-if1 = { package = "cfg-if", version = "1.0.0", registry = "crates.io" }
cfg-if2 = { package = "cfg-if", version = "1.0.0", registry-index = "https://github.com/rust-lang/crates.io-index" }
# Local path
# local = { path = "./local" }
# Git url
semver1 = { package = "semver", git = "https://github.com/dtolnay/semver", tag = "1.0.4" }
semver2 = { package = "semver", git = "git://github.com/dtolnay/semver", branch = "master" }
semver3 = { package = "semver", git = "ssh://git@github.com/dtolnay/semver", rev = "ea9ea80c023ba3913b9ab0af1d983f137b4110a5" }
semver4 = { package = "semver", git = "ssh://git@github.com/dtolnay/semver" }
