[package]
name = "tokio-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = [ "rt-multi-thread", "macros", "time" ] }
liboldc = { package = "libc", version = "0.1" }
